# kazana

./: .eslintignore  .eslintrc.js  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  babel.config.js  binding.gyp  first-run.js  index.html  main.js  package.json  tsconfig.json  webpack.config.js  ws.js
.github/: publish.yml
.github/workflows/: publish.yml
app/: index.html
app/src/: App.js  index.js
app/src/css/: App.css
docker/: Dockerfile
engine/pulseaudio/: stream.py
public/: index.html
src/@types/: main.d.ts  wormhole.d.ts
src/main/: index.ts  launch.ts  stream.js  stream.ts  update.ts  websocket.ts
src/renderer/: App.tsx
src/renderer/views/: About.tsx  Auth.tsx
wormhole/: README.md  addon.cpp  stream.cpp  stream.h
